# graphical-audio-app

./: .gitignore  CMakeLists.txt  DevNotes.md  README.md  theoryBase.md  thesis_calendar.md
assets/shaders/: base.vs  circles.fs  crt.fs  datamosh.fs  electric.fs  waveform.fs
include/audio/: AudioEngine.hpp  AudioMath.hpp  IEffect.hpp  MuffleEffect.hpp  Oscillator.hpp
include/core/: App.hpp  CommandHistory.hpp  ICommand.hpp  IObserver.hpp  StateManager.hpp
include/ui/: GridContainer.hpp  ShaderWidget.hpp  Slider.hpp  ThemeManager.hpp  Tooltip.hpp  Widget.hpp
src/: main.cpp
src/audio/: AudioEngine.cpp  MuffleEffect.cpp  Oscillator.cpp
src/core/: App.cpp  CommandHistory.cpp  StateManager.cpp
src/ui/: GridContainer.cpp  ShaderWidget.cpp  Slider.cpp
